added questions and timer

--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-sm-12 text-center">
+            <div class="col-12 text-center">
                 <button type = "button" class = "btn btn-warning btn-lg" id = "start">Start Quiz</button>
                 <div id="quiz" style = "display: none">
-                    <div id="a"></div>
-                    <div id="b"></div>
-                    <div id="c"></div>
-                    
+                    <div id = "question"></div>
+                    <br>
+                    <div id = "options">
+                        <div id="a"></div>
+                        <div id="b"></div>
+                        <div id="c"></div>
                     </div>
+                    <br>
+                    <br>
+                 <div id="message"></div>
+                    
                 </div>
             </div>
         </div>
