added css,fixed timer negative problems,draffed scores page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
                 <h5 class="text-center" id="h5Exp">Please finish this quiz in 60s, trust yourself!!!</h5>
             </div>
         </div>
+        <div class="row">
+        
+        <div class ="col-12" id="initialForm">
+            <p>Enter initials: 
+                <input type="text" id="initial">
+            
+            <button id="submitInitial">Submit</button>
+            </p>
+        </div>
+       </div>
         <br>
         <div class="row">
             <div class="col-12 text-center">
