--- a/scores.html
+++ b/scores.html
@@ -10,6 +10,7 @@
 
     <br>
     <br>
+    <div class="container">
     <table class="table">
         <thead>
           <tr>
@@ -21,17 +22,16 @@
           <tr>
             <th scope="row">1</th>
             <td>Mark</td>
-            <td>Otto</td>
           </tr>
           <tr>
             <th scope="row">2</th>
             <td>Jacob</td>
-            <td>Thornton</td>
           </tr>
           <tr>
           </tr>
         </tbody>
       </table>
+    </div>
 
 
 </table>
