added event listener, localstorage'
cd

--- a/scores.html
+++ b/scores.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scores</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scores</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <br>
-    <br>
-    <div class="container">
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Scores</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-          </tr>
-          <tr>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <br>
+  <br>
+  <div class="container" id="scoresContainer">
+    <div class=row>
+      <div class="col-6">
+          <p><a href="./index.html"> Coding Quiz</a></p>
+      </div>
+      <div class="col-6">
+          <p class="float-right" id="timer">Time: </p>
+      </div>
+  </div>
+     <H2>Highscores</H2>
+     <ul id="scoreAndInitial"></ul>
+    <button id="goBackButton">Go Back</button>
+    <button id="clearScores">Clear Highscores</button>
+  </div>
 
 
-</table>
-
-    
+<script src="./scores.js"></script>
 </body>
+
 </html>
