timer fixed again,sort the scores

--- a/scores.html
+++ b/scores.html
@@ -17,7 +17,7 @@
   <div class="container" id="scoresContainer">
     <div class=row>
       <div class="col-6">
-          <p><a href="./index.html"> Coding Quiz</a></p>
+          <p><a href="./index.html"> Restart Coding Quiz</a></p>
       </div>
       <div class="col-6">
           <p class="float-right" id="timer">Time: </p>
@@ -25,7 +25,7 @@
   </div>
      <H2>Highscores</H2>
      <ul id="scoreAndInitial"></ul>
-    <button id="goBackButton">Go Back</button>
+    <button id="goBackButton"><a href="index.html">Go Back</a></button>
     <button id="clearScores">Clear Highscores</button>
   </div>
 
