--- a/scores.html
+++ b/scores.html
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color:	lightcyan;">
 
   <br>
   <br>
@@ -23,10 +23,10 @@
           <p class="float-right" id="timer">Time: </p>
       </div>
   </div>
-     <H2>Highscores</H2>
-     <ul id="scoreAndInitial"></ul>
-    <button id="goBackButton"><a href="index.html">Go Back</a></button>
-    <button id="clearScores">Clear Highscores</button>
+     <H2 class="bg-info text-white text-center">Highscores</H2>
+     <ol id="scoreAndInitial"></ol>
+    <button class="btn btn-info" id="goBackButton"><a href="index.html">Go Back</a></button>
+    <button class="btn btn-info" id="clearScores">Clear Highscores</button>
   </div>
 
 
