--- a/scores.html
+++ b/scores.html
@@ -14,20 +14,25 @@
 
   <br>
   <br>
-  <div class="container" id="scoresContainer">
-    <div class=row>
-      <div class="col-6">
-          <p><a href="./index.html"> Restart Coding Quiz</a></p>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center text-white">
+        <H2 class="bg-info">Highscores</H2>
+     </div>
+    </div>
+    <div class="row">
+      <div class="col-12 text-center">
+         <ol id="scoreAndInitial"></ol>
       </div>
-      <div class="col-6">
-          <p class="float-right" id="timer">Time: </p>
-      </div>
-  </div>
-     <H2 class="bg-info text-white text-center">Highscores</H2>
-     <ol id="scoreAndInitial"></ol>
-    <button class="btn btn-info" id="goBackButton"><a href="index.html">Go Back</a></button>
-    <button class="btn btn-info" id="clearScores">Clear Highscores</button>
-  </div>
+    </div>
+    <div class="row">
+      <div class="col-12 text-center">
+        <button class="btn btn-info" id="goBackButton"><a href="index.html">Go Back</a></button>
+        <button class="btn btn-info" id="clearScores">Clear Highscores</button>
+     </div> 
+    </div>
+
 
 
 <script src="./scores.js"></script>
