--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="background-color:	lightcyan;">
     <div class = "container">
-        <div class = row>
+        <div class = "row">
             <div class = "col-6">
                 <p><a href = "./scores.html"> View Highscores</a></p>
             </div>
@@ -21,12 +21,14 @@
                 <p class = "float-right" id = "timer">Time: </p>
             </div>
         </div>
+        <br>
+        <br>
         <div class = "row">
             <div class = "col-12">
                 <h1 class = "text-center" id = "h1Code">Coding Quiz Challenge</h1>
             </div>
         </div>
-        <div class = row>
+        <div class = "row">
             <div class = "col-12">
                 <h5 class = "text-center" id = "h5Exp">Please finish this quiz in 60s, trust yourself!!!</h5>
             </div>
